re PR c++/44682 (warning: variable ‘x’ set but not used)

PR c++/44682
	* class.c (build_base_path): If want_pointer, call mark_rvalue_use
	on expr.

	* g++.dg/warn/Wunused-var-14.C: New test.

From-SVN: r161511